# Vizioner

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  __init__.py  app.py  pyproject.toml
common/: __init__.py  celery_app.py  config.py  models_catalog.py  pyproject.toml  settings.py  task_store.py
tests/: pyproject.toml
tests/e2e/: test_core.py  test_health.py  test_models.py  test_tasks.py  test_text2audio.py  test_text2image.py  test_text2video.py
worker/: Dockerfile  __init__.py  handler.py  pyproject.toml  tasks.py
