[project]
name = "generative-ai-api"
version = "0.1.0"
description = "Generative AI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.2",
    "redis>=5.0.8",
    "uvicorn>=0.30.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[tool.uv]
default-groups = ["dev"]
