[project]
name = "vizioner-common"
version = "0.1.0"
description = "Shared components for Vizioner"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "pydantic>=2.8.2",
    "redis>=5.0.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["common"]
