[project]
name = "vizioner-worker"
version = "0.1.0"
description = "Vizioner worker service"
requires-python = ">=3.12"
dependencies = [
    "vizioner-common",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["worker"]
