[project]
name = "vizioner-worker"
version = "0.1.0"
description = "Vizioner worker service"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.10.1",
    "celery>=5.6.0",
    "datasets==4.1.0",
    "diffusers==0.35.1",
    "ftfy==6.3.1",
    "huggingface-hub==0.35.0",
    "librosa==0.11.0",
    "peft==0.17.1",
    "redis>=7.1.0",
    "torchvision==0.24.0",
    "tqdm==4.67.1",
    "transformers==4.56.1",
    "triton==3.5.0",
    "trl==0.19.1",
]

